terraform-w07/Gateway.tf
## Gateway 
resource "aws_internet_gateway" "gtw1" {
  vpc_id = aws_vpc.vpc1.id
  tags = {
    Name = "IGW"
  }

}
