terraform-w07/subnet.tf
## Subnet

resource "aws_subnet" "public_subnet1" {
  availability_zone       = "us-east-1a"
  vpc_id                  = aws_vpc.vpc1.id
  cidr_block              = "172.120.1.0/24"
  map_public_ip_on_launch = true
  tags = {
    Name = "subnet-public-vpc"
    env  = "Dev"
  }
}

resource "aws_subnet" "public_subnet2" {
  availability_zone       = "us-east-1b"
  vpc_id                  = aws_vpc.vpc1.id
  cidr_block              = "172.120.2.0/24"
  map_public_ip_on_launch = true
  tags = {
    Name = "subnet-public-vpc"
    env  = "Dev"
  }
}
## Private subnet

resource "aws_subnet" "private_subnet1" {
  availability_zone = "us-east-1a"
  vpc_id            = aws_vpc.vpc1.id
  cidr_block        = "172.120.3.0/24"
  tags = {
    Name = "subnet-private-vpc"
    env  = "Dev"
  }

}
resource "aws_subnet" "private_subnet2" {
  availability_zone = "us-east-1b"
  vpc_id            = aws_vpc.vpc1.id
  cidr_block        = "172.120.4.0/24"
  tags = {
    Name = "subnet-private-vpc"
    env  = "Dev"
  }

}
